# tensorstream

./: .gitignore  .pre-commit-config.yaml  BUG_FIXES.md  CHANGELOG.md  CONTRIBUTING.md  FINAL_STATUS_REPORT.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  Makefile  PRODUCTION_DEPLOYMENT_GUIDE.md  README.md  comprehensive_test.py  demo.py  final_integration_test.py  implementation_plan.md  production_validation.py  pyproject.toml  quick_test.py  requirements-all.txt  requirements-build.txt  requirements-dev.txt  requirements-docs.txt  requirements-prod.txt  requirements-test.txt  requirements.txt  setup.py  test_performance.py  test_proxy_fix.py  test_transformers_compat.py  validate_fix.py
examples/: README.md  advanced_config.py  basic_usage.py  benchmark.py
tensorstream/: __init__.py  api.py  config.py  exceptions.py  io.py  orchestrator.py  proxy.py
tensorstream/backends/: __init__.py  cuda_backend.py  gpudirect_backend.py  mmap_backend.py
tensorstream/csrc/: cuda_core.cpp  gds_core.cpp  gds_wrapper.cpp  gds_wrapper.h  memory_manager.cpp  memory_manager.h
tests/: conftest.py
tests/integration/: test_integration.py
tests/unit/: test_api.py  test_backends.py  test_config.py  test_io.py  test_orchestrator.py  test_proxy.py
