[build-system]
requires = ["poetry-core>=1.0.0", "setuptools>=64", "wheel", "torch", "pybind11[global]", "ninja"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tensorstream"
version = "0.1.0"
description = "High-performance PyTorch tensor streaming library for transparent model layer offloading"
authors = ["TensorStream Contributors <info@tensorstream.ai>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/tensorstream/tensorstream"
repository = "https://github.com/tensorstream/tensorstream"
documentation = "https://tensorstream.readthedocs.io"
keywords = ["pytorch", "deep-learning", "gpu", "streaming", "memory-optimization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [{include = "tensorstream"}]
include = [
    "tensorstream/csrc/*.cpp",
    "tensorstream/csrc/*.h", 
    "tensorstream/csrc/*.cu"
]

[tool.poetry.dependencies]
python = "^3.8"
torch = ">=1.12.0"
numpy = ">=1.21.0"
psutil = ">=5.8.0"
tqdm = ">=4.62.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=6.2.0"
pytest-cov = ">=3.0.0"
pytest-xdist = ">=2.5.0"
pytest-mock = ">=3.6.0"
pytest-asyncio = ">=0.21.0"
black = ">=22.0.0"
isort = ">=5.10.0"
flake8 = ">=4.0.0"
mypy = ">=0.950"
pre-commit = ">=2.17.0"
pybind11 = ">=2.10.0"
ninja = ">=1.10.0"

[tool.poetry.group.test.dependencies]
pytest = ">=6.2.0"
pytest-cov = ">=3.0.0"
pytest-xdist = ">=2.5.0"
pytest-mock = ">=3.6.0"
transformers = ">=4.20.0"

[tool.poetry.group.docs.dependencies]
sphinx = ">=4.5.0"
sphinx-rtd-theme = ">=1.0.0"
sphinxcontrib-napoleon = ">=0.7"

[tool.poetry.build]
generate-setup-file = true

[tool.setuptools.packages.find]
where = ["."]
include = ["tensorstream*"]

[tool.setuptools.package-data]
tensorstream = ["csrc/*.cpp", "csrc/*.h", "csrc/*.cu"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --cov=tensorstream --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests as requiring GPU (deselect with '-m \"not gpu\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
